--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "CaseflowFrontend",
+  "name": "caseflow-frontend",
+  "private": true,
   "repository": "https://github.com/department-of-veterans-affairs/caseflow",
-  "license": "",
+  "license": "none",
   "version": "0.0.1",
   "engines": {
     "node": "4.1.2",
