--- a/client/package.json
+++ b/client/package.json
@@ -61,5 +61,8 @@
     "mocha": "^3.1.2",
     "react-addons-test-utils": "^15.4.2",
     "sinon": "^2.1.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "*"
   }
 }
