--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "CaseflowFrontend",
+  "name": "caseflow-frontend",
+  "private": true,
   "repository": "https://github.com/department-of-veterans-affairs/caseflow",
-  "license": "",
+  "license": "none",
   "version": "0.0.1",
   "engines": {
     "node": "4.1.2",
@@ -9,31 +10,22 @@
   },
   "scripts": {
     "test": "NODE_ENV=test mocha --recursive test/setup.js test/* --compilers js:babel-core/register",
-    "test:watch": "NODE_ENV=test mocha --recursive test/setup.js test/* --watch --compilers jsx:babel-core/register js:babel-core/register",
+    "test:watch": "npm run test -- --watch",
     "lint": "eslint . --ext .jsx --ext .js",
-    "lint:fix": "eslint . --fix --ext .jsx --ext .js",
-    "build:test": "NODE_ENV=test webpack --config webpack.config.js",
-    "build:production": "NODE_ENV=production webpack --config webpack.config.js",
-    "build:development": "webpack -w --config webpack.config.js"
+    "lint:fix": "npm run lint -- --fix",
+    "build": "webpack --config webpack.config.js",
+    "build:test": "NODE_ENV=test npm run build",
+    "build:production": "NODE_ENV=production npm run build",
+    "build:development": "npm run build -- -w"
   },
   "cacheDirectories": [
     "node_modules",
     "client/node_modules"
   ],
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.4",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
     "es5-shim": "^4.5.7",
-    "expose-loader": "^0.7.1",
     "history": "^4.5.1",
-    "imports-loader": "^0.6.5",
     "jsdom": "^9.8.3",
     "lodash": "^4.17.2",
     "pdf-annotate.js": "^1.0.0",
@@ -48,24 +40,27 @@
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
     "superagent": "^3.0.0",
-    "superagent-no-cache": "^0.1.0",
-    "webpack": "^1.12.14"
+    "superagent-no-cache": "^0.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-eslint": "^6.1.2",
-    "babel-polyfill": "^6.16.0",
+    "babel-loader": "^6.4.1",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
     "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-react": "^6.7.1",
+    "expose-loader": "^0.7.3",
+    "imports-loader": "^0.7.1",
     "mocha": "^3.1.2",
-    "npm-shrinkwrap": "^6.0.2",
     "react-addons-test-utils": "^15.4.2",
-    "sinon": "^2.1.0"
+    "sinon": "^2.1.0",
+    "webpack": "^2.3.3"
   },
   "optionalDependencies": {
     "fsevents": "*"
