--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "imports-loader": "^0.7.1",
     "mocha": "^3.1.2",
     "react-addons-test-utils": "^15.4.2",
+    "react-svg-loader": "^1.1.1",
     "sinon": "^2.1.0",
     "webpack": "^2.3.3"
   },
