--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
-language: ruby
+language: node_js
 dist: trusty
 sudo: required
 rvm:
   - 2.2.4
+node_js:
+  - "7.7.4"
 
 branches:
     only:
@@ -15,7 +17,7 @@ before_install:
 before_script:
   - node -v
   - npm -v
-  - npm install --no-optional
+  - cd ./client && npm install --no-optional
   - sudo apt-get install pdftk
   - RAILS_ENV=test bundle exec rake db:create
   - RAILS_ENV=test bundle exec rake db:schema:load
