--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "npm": "2.14.4"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha --recursive test/setup.js test/* --compilers js:babel-core/register",
+    "test": "NODE_ENV=test karma start",
     "test:watch": "npm run test -- --watch",
     "lint": "eslint . --ext .jsx --ext .js",
     "lint:fix": "npm run lint -- --fix",
@@ -57,6 +57,11 @@
     "eslint-plugin-react": "^6.7.1",
     "expose-loader": "^0.7.3",
     "imports-loader": "^0.7.1",
+    "karma": "^1.6.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
     "mocha": "^3.1.2",
     "react-addons-test-utils": "^15.4.2",
     "sinon": "^2.1.0",
