--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 before_script:
   - node -v
   - npm -v
-  - npm install --no-optional
+  - cd ./client && npm install --no-optional
   - sudo apt-get install pdftk
   - RAILS_ENV=test bundle exec rake db:create
   - RAILS_ENV=test bundle exec rake db:schema:load
