--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,8 @@
     "redux-logger": "^3.0.0",
     "reselect": "^3.0.0",
     "superagent": "^3.0.0",
-    "superagent-no-cache": "^0.1.0"
+    "superagent-no-cache": "^0.1.0",
+    "webpack": "^2.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
@@ -60,8 +61,7 @@
     "imports-loader": "^0.7.1",
     "mocha": "^3.1.2",
     "react-addons-test-utils": "^15.4.2",
-    "sinon": "^2.1.0",
-    "webpack": "^2.3.3"
+    "sinon": "^2.1.0"
   },
   "optionalDependencies": {
     "fsevents": "*"
