--- a/client/package.json
+++ b/client/package.json
@@ -62,7 +62,7 @@
     "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-react": "^6.7.1",
     "expose-loader": "^0.7.3",
-    "imports-loader": "^0.7.1",
+    "imports-loader": "https://registry.npmjs.org/imports-loader/-/imports-loader-0.7.1.tgz",
     "karma": "^1.6.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
