--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "test": "npm run test:karma && npm run test:legacy",
     "test:legacy": "NODE_ENV=test mocha --recursive test/node/setup.js test/node/* --compilers jsx:babel-core/register js:babel-core/register",
     "test:karma": "NODE_ENV=test karma start",
-    "test:karma:watch": "npm run test:karma -- --watch",
+    "test:karma:watch": "npm run test:karma -- --no-single-run",
     "test:legacy:watch": "npm run test:legacy -- --watch",
     "lint": "eslint . --ext .jsx --ext .js",
     "lint:fix": "npm run lint -- --fix",
