--- a/client/package.json
+++ b/client/package.json
@@ -41,13 +41,14 @@
     "lodash": "^4.17.2",
     "pdf-annotate.js": "^1.0.0",
     "pdfjs-dist": "^1.6.414",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-on-rails": "^6.8.0",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-select": "^1.0.0-rc.3",
+    "react-test-renderer": "^15.5.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
     "reselect": "^3.0.0",
