--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_script:
 script:
   - bundle exec rake spec
   - bundle exec rake ci:other
-  - cd ./client && rm -rf node_modules && npm install --production --no-optional && npm test
+  - rm -rf node_modules && npm install --production --no-optional && npm run build:production
 
 bundler_args: "--deployment --without development staging production"
 cache:
