--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "react-test-renderer": "^15.5.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
+    "react-zeroclipboard": "^0.4.1",
     "reselect": "^3.0.0",
     "superagent": "^3.0.0",
     "superagent-no-cache": "^0.1.0",
