--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "npm": "3.10.10"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha --recursive test/setup.js test/* --compilers jsx:babel-core/register js:babel-core/register",
-    "test:watch": "npm run test -- --watch",
+    "test": "npm run test:karma && npm run test:legacy",
+    "test:legacy": "NODE_ENV=test mocha --recursive test/node/setup.js test/node/* --compilers jsx:babel-core/register js:babel-core/register",
+    "test:karma": "NODE_ENV=test karma start",
+    "test:karma:watch": "npm run test:karma -- --no-single-run",
+    "test:legacy:watch": "npm run test:legacy -- --watch",
     "lint": "eslint . --ext .jsx --ext .js",
     "lint:fix": "npm run lint -- --fix",
     "build": "webpack --config webpack.config.js",
@@ -31,19 +34,22 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.6.1",
     "es5-shim": "^4.5.7",
+    "expose-loader": "^0.7.3",
     "history": "^4.5.1",
     "imports-loader": "^0.7.1",
     "jsdom": "^9.8.3",
     "lodash": "^4.17.2",
+    "moment": "^2.18.1",
     "pdf-annotate.js": "^1.0.0",
     "pdfjs-dist": "^1.6.414",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-on-rails": "^6.8.0",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-select": "^1.0.0-rc.3",
+    "react-test-renderer": "^15.5.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
     "reselect": "^3.0.0",
@@ -54,12 +60,15 @@
   "devDependencies": {
     "babel-eslint": "^6.1.2",
     "chai": "^3.5.0",
-    "classnames": "https://registry.npmjs.org/classnames/-/classnames-2.2.5.tgz",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
     "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-react": "^6.7.1",
-    "expose-loader": "^0.7.3",
+    "karma": "^1.6.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
     "mocha": "^3.1.2",
     "react-addons-test-utils": "^15.4.2",
     "sinon": "^2.1.0"
