added json package

--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,8 @@
     "moment": "^2.18.1",
     "pdf-annotate.js": "^1.0.0",
     "pdfjs-dist": "^1.6.414",
-    "react": "^15.5.4",
+    "react": "https://registry.npmjs.org/react/-/react-15.5.4.tgz",
+    "react-copy-to-clipboard": "^4.3.0",
     "react-dom": "^15.5.4",
     "react-on-rails": "^6.8.0",
     "react-redux": "^5.0.3",
@@ -52,7 +53,6 @@
     "react-test-renderer": "^15.5.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
-    "react-zeroclipboard": "^0.4.1",
     "reselect": "^3.0.0",
     "superagent": "^3.0.0",
     "superagent-no-cache": "^0.1.0",
