--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "react-test-renderer": "^15.5.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0",
     "superagent": "^3.0.0",
     "superagent-no-cache": "^0.1.0",
