Break the build for any lint warning

--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "test:karma": "NODE_ENV=test karma start",
     "test:karma:watch": "npm run test:karma -- --no-single-run",
     "test:legacy:watch": "npm run test:legacy -- --watch",
-    "lint": "eslint . --ext .jsx --ext .js",
+    "lint": "eslint . --ext .jsx --ext .js --max-warnings 0",
     "lint:fix": "npm run lint -- --fix",
     "build": "webpack --config webpack.config.js",
     "build:test": "NODE_ENV=test npm run build",
