--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,3 +1,16 @@
 {
-  "presets": ["es2015", "stage-0", "react"]
+  "presets": ["es2015", "stage-0", "react"],
+    "env": {
+      // only enable it when process.env.NODE_ENV is 'development' or undefined
+      "development": {
+        "plugins": [["react-transform", {
+          "transforms": [{
+            "transform": "react-transform-hmr",
+            "imports": ["react"],
+            // this is important for Webpack HMR:
+            "locals": ["module"]
+          }]
+        }]]
+      }
+    }
 }
