--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "pdf-annotate.js": "^1.0.0",
     "pdfjs-dist": "^1.6.414",
     "react": "^15.5.4",
+    "react-copy-to-clipboard": "^4.3.0",
     "react-dom": "^15.5.4",
     "react-on-rails": "^6.8.0",
     "react-redux": "^5.0.3",
