--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "test:karma": "NODE_ENV=test karma start",
     "test:karma:watch": "npm run test:karma -- --no-single-run",
     "test:legacy:watch": "npm run test:legacy -- --watch",
-    "lint": "eslint . --ext .jsx --ext .js",
+    "lint": "eslint . --ext .jsx --ext .js --max-warnings 0",
     "lint:fix": "npm run lint -- --fix",
     "build": "webpack --config webpack.config.js",
     "build:test": "NODE_ENV=test npm run build",
@@ -43,14 +43,18 @@
     "pdf-annotate.js": "^1.0.0",
     "pdfjs-dist": "^1.6.414",
     "react": "^15.5.4",
+    "react-addons-update": "^15.5.2",
+    "react-copy-to-clipboard": "^4.3.0",
     "react-dom": "^15.5.4",
     "react-on-rails": "^6.8.0",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
+    "react-select": "^1.0.0-rc.3",
     "react-test-renderer": "^15.5.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
+    "redux-thunk": "https://registry.npmjs.org/redux-thunk/-/redux-thunk-2.2.0.tgz",
     "reselect": "^3.0.0",
     "superagent": "^3.0.0",
     "superagent-no-cache": "^0.1.0",
@@ -66,6 +70,7 @@
     "karma": "^1.6.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
     "mocha": "^3.1.2",
