Moving tests to firefox

--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,7 @@
     "imports-loader": "^0.7.1",
     "jsdom": "^9.8.3",
     "lodash": "^4.17.2",
-    "moment": "^2.18.1",
+    "moment": "https://registry.npmjs.org/moment/-/moment-2.18.1.tgz",
     "pdf-annotate.js": "^1.0.0",
     "pdfjs-dist": "^1.6.414",
     "react": "^15.5.4",
@@ -66,6 +66,7 @@
     "eslint-plugin-react": "^6.7.1",
     "karma": "^1.6.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
     "karma-sourcemap-loader": "^0.3.7",
