--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "es5-shim": "^4.5.7",
     "expose-loader": "^0.7.3",
     "history": "^4.5.1",
+    "immutability-helper": "^2.1.2",
     "imports-loader": "^0.7.1",
     "jsdom": "^9.8.3",
     "lodash": "^4.17.2",
@@ -43,7 +44,6 @@
     "pdf-annotate.js": "^1.0.0",
     "pdfjs-dist": "^1.6.414",
     "react": "^15.5.4",
-    "react-addons-update": "^15.5.2",
     "react-copy-to-clipboard": "^4.3.0",
     "react-dom": "^15.5.4",
     "react-on-rails": "^6.8.0",
