--- a/client/.babelrc
+++ b/client/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["es2015", "stage-0", "react"],
     "env": {
       // only enable it when process.env.NODE_ENV is 'development' or undefined
-      "development": {
+      "development-hot": {
         "plugins": [["react-transform", {
           "transforms": [{
             "transform": "react-transform-hmr",
