--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - export PATH=$PWD/travis-node/node-v6.10.2-linux-x64/bin:$PATH
   - node -v
   - sudo apt-get update
-  - sudo apt-get install chromium-chromedriver
+  - sudo apt-get install chromium-chromedriver=53.0.2785.143-0ubuntu0.14.04.1.1145
 
 before_script:
   - node -v
