--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,15 @@ branches:
       - master
 
 before_install:
-  - sudo apt-get update
-  # - sudo apt-get install chromium-chromedriver
-  - wget http://launchpadlibrarian.net/293436680/chromium-chromedriver_53.0.2785.143-0ubuntu0.14.04.1.1145_amd64.deb -O $PWD/chromium-chromedriver.deb
-  - sudo dpkg -i $PWD/chromium-chromedriver.deb
-  - sudo apt-get install -f
   - mkdir travis-node
   - wget https://s3-us-gov-west-1.amazonaws.com/shared-s3/dsva-appeals/node-v6.10.2-linux-x64.tar.xz -O $PWD/travis-node/node-v6.10.2-linux-x64.tar.xz
   - tar xf $PWD/travis-node/node-v6.10.2-linux-x64.tar.xz -C $PWD/travis-node
   - export PATH=$PWD/travis-node/node-v6.10.2-linux-x64/bin:$PATH
   - node -v
+  - sudo apt-get update
+  - wget https://s3-us-gov-west-1.amazonaws.com/dsva-appeals-devops/chromium-chromedriver_53.0.2785.143-0ubuntu0.14.04.1.1145_amd64.deb -O $PWD/chromium-chromedriver.deb
+  - sudo dpkg -i $PWD/chromium-chromedriver.deb
+  - sudo apt-get install -f
 
 before_script:
   - node -v
