Add a production block, sadness

--- a/client/.babelrc
+++ b/client/.babelrc
@@ -16,6 +16,9 @@
     },
     "development": {
       "presets": ["es2015", "stage-0", "react"],
+    },
+    "production": {
+      "presets": ["es2015", "stage-0", "react"],
     }
   }
 }
