remove extra comma

--- a/client/.babelrc
+++ b/client/.babelrc
@@ -12,13 +12,13 @@
       ]
     },
     "test": {
-      "presets": ["es2015", "stage-0", "react"],
+      "presets": ["es2015", "stage-0", "react"]
     },
     "development": {
-      "presets": ["es2015", "stage-0", "react"],
+      "presets": ["es2015", "stage-0", "react"]
     },
     "production": {
-      "presets": ["es2015", "stage-0", "react"],
+      "presets": ["es2015", "stage-0", "react"]
     }
   }
 }
