Setup webpack hot module reloading (#1697)
* WIP

* add named modules

* wip2

* WIP3

* Update readme

* fix npm shrinkwrap

* Move from react-transform-hmr to react-hot-loader

* Support reducer reload in Certification

* lint fixes

* Updates for Nick

* Fix npm shrinkwrap

* Update README

* lint fixes

* Update webpack hot server headers

* Update package.json

* Fix legacy tests

* Explicitly add test/dev blocks

* remove historyApiFallback

* remove superfluous options

* Add a production block, sadness

* remove extra comma

* Set it up for reader

* no need for require

* foo

* fix lint

* bump up max len

* Fix PdfSidebar

* fix procfile

* fix reader tests

* fix reader tests round 2

--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,3 +1,24 @@
 {
-  "presets": ["es2015", "stage-0", "react"]
+  "env": {
+    // only enabled for development-hot
+    "development-hot": {
+      "plugins": [
+        "react-hot-loader/babel"
+      ],
+      "presets": [
+        ["es2015", { "modules": false }],
+        "stage-0",
+        "react"
+      ]
+    },
+    "test": {
+      "presets": ["es2015", "stage-0", "react"]
+    },
+    "development": {
+      "presets": ["es2015", "stage-0", "react"]
+    },
+    "production": {
+      "presets": ["es2015", "stage-0", "react"]
+    }
+  }
 }
