--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "build": "webpack --config webpack.config.js",
     "build:test": "NODE_ENV=test npm run build",
     "build:production": "NODE_ENV=production npm run build",
-    "dev": "rm ../app/assets/webpack/* || true && npm run build -- -w"
+    "dev:clear-build": "rm ../app/assets/webpack/* || true",
+    "dev": "npm run dev:clear-build && NODE_ENV=development npm run build -- -w",
+    "dev:hot": "npm run dev:clear-build && NODE_ENV=development-hot node webpack-hot-server.js"
   },
   "cacheDirectories": [
     "node_modules",
@@ -47,6 +49,7 @@
     "react": "^15.5.4",
     "react-copy-to-clipboard": "^4.3.0",
     "react-dom": "^15.5.4",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-on-rails": "^6.8.0",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
@@ -77,7 +80,8 @@
     "karma-webpack": "^2.0.3",
     "mocha": "^3.1.2",
     "react-addons-test-utils": "^15.4.2",
-    "sinon": "^2.1.0"
+    "sinon": "^2.1.0",
+    "webpack-dev-server": "^2.4.2"
   },
   "optionalDependencies": {
     "fsevents": "*"
