--- a/config/sidekiq_cron.yml
+++ b/config/sidekiq_cron.yml
@@ -17,3 +17,12 @@ prepare_establish_claim_tasks_job:
   class: "PrepareEstablishClaimTasksJob"
   queue: default
   active_job: true
+
+# This job is used to debug https://github.com/department-of-veterans-affairs/caseflow/issues/1814
+# It is scheduled to run every 5 minute to make sure Sidekiq and Sidekiq Cron
+# are both operational. It will be removed once the issue is fixed.
+heartbeat_tasks_job:
+  cron: "* * * * * America/New_York"
+  class: "HeartbeatTasksJob"
+  queue: default
+  active_job: true
