--- a/config/sidekiq_cron.yml
+++ b/config/sidekiq_cron.yml
@@ -3,6 +3,7 @@ create_establish_claim_tasks_job:
   cron: "1 0 * * * America/New_York"
   class: "CreateEstablishClaimTasksJob"
   queue: default
+  active_job: true
 
 reassign_old_tasks:
   cron: "1 0 * * * America/New_York"
@@ -15,5 +16,14 @@ reassign_old_tasks:
 prepare_establish_claim_tasks_job:
   cron: "2 0 * * * America/New_York"
   class: "PrepareEstablishClaimTasksJob"
+  queue: default
+  active_job: true
+
+# This job is used to debug https://github.com/department-of-veterans-affairs/caseflow/issues/1814
+# It is scheduled to run every 5 minute to make sure Sidekiq and Sidekiq Cron
+# are both operational. It will be removed once the issue is fixed.
+heartbeat_tasks_job:
+  cron: "*/5 * * * * America/New_York"
+  class: "HeartbeatTasksJob"
   queue: default
   active_job: true
