--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
     "reselect": "^3.0.0",
     "superagent": "^3.0.0",
     "superagent-no-cache": "^0.1.0",
+    "uuid": "^3.0.1",
     "webpack": "^2.3.3"
   },
   "devDependencies": {
