--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "react-copy-to-clipboard": "^4.3.0",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-list": "^0.8.6",
     "react-on-rails": "^6.8.0",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
