--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "prop-types": "https://registry.npmjs.org/prop-types/-/prop-types-15.5.8.tgz",
     "react": "^15.5.4",
     "react-addons-perf": "^15.4.2",
+    "react-banner": "^0.3.1",
     "react-copy-to-clipboard": "^4.3.0",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.6",
