--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-sanfona": "^0.2.3",
     "react-select": "^1.0.0-rc.4",
     "react-test-renderer": "^15.5.4",
     "redux": "^3.6.0",
