--- a/config/database.yml
+++ b/config/database.yml
@@ -7,8 +7,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: <%=ENV["POSTGRES_HOST"] || localhost %>
+  password: <%=ENV["POSTGRES_PASSWORD"]%>
   pool: <%= ENV["DB_CONN_POOL_MAX_SIZE"] || 5 %>
   timeout: 5000
+  template: template0
   variables:
     statement_timeout: 30_000 # 30 seconds
 
