--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "lint:fix": "npm run lint -- --fix",
     "build": "webpack --config webpack.config.js",
     "build:test": "NODE_ENV=test npm run build",
+    "build:demo": "NODE_ENV=development npm run build",
     "build:production": "NODE_ENV=production npm run build",
     "dev:clear-build": "rm ../app/assets/webpack/* || true",
     "dev": "npm run dev:clear-build && NODE_ENV=development npm run build -- -w",
