--- a/config/database.yml
+++ b/config/database.yml
@@ -71,7 +71,7 @@ test:
 
 test_jenkins:
   <<: *default
-  host: <%=ENV["POSTGRES_HOST"]%>
+  host: localhost
   username: <%= ENV["POSTGRES_USERNAME"]%>
   password: <%=ENV["POSTGRES_PASSWORD"]%>
   database: caseflow_certification_test<%= ENV['TEST_ENV_NUMBER'] %>
