--- a/config/sidekiq_cron.yml
+++ b/config/sidekiq_cron.yml
@@ -28,7 +28,7 @@ heartbeat_tasks_job:
   queue: default
   active_job: true
 
-# Checks dependecies from Monitor (BGS, VACOLS, VBMS, VBMS.FindDocumentSeriesReference)
+# Checks dependecies every 30 seconds(BGS, VACOLS, VBMS, VBMS.FindDocumentSeriesReference)
 dependencies_check_job:
   cron: "* * * * * America/New_York"
   class: "DependenciesCheckJob"
