--- a/config/database.yml
+++ b/config/database.yml
@@ -66,8 +66,8 @@ production_vacols:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  host: localhost
-  username: postgres
+  host: <%= ENV['POSTGRES_HOST'] %>
+  username: <%= ENV['POSTGRES_USER'] || `whoami` %>
   database: caseflow_certification_test<%= ENV['TEST_ENV_NUMBER'] %>
 
 test_vacols:
