first naive commit

--- a/config/database.yml
+++ b/config/database.yml
@@ -67,6 +67,7 @@ production_vacols:
 test:
   <<: *default
   username: <%= `whoami` %>
+  host: <%= ENV["POSTGRES_HOST"] %>
   database: caseflow_certification_test<%= ENV['TEST_ENV_NUMBER'] %>
 
 test_vacols:
