--- a/client/package.json
+++ b/client/package.json
@@ -119,6 +119,7 @@
     "react-virtualized": "^9.21.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.4",
     "redux-perf-middleware": "^1.2.2",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.5",
