--- a/.reek.yml
+++ b/.reek.yml
@@ -125,6 +125,7 @@ detectors:
       - Api::V3::DecisionReviews::HigherLevelReviewIntakeProcessor
       - ETL::Syncer
       - User
+      - HearingSchedule::GenerateHearingDaysSchedule
   IrresponsibleModule:
     enabled: false
   LongParameterList:
