disable utility function for all helpers

--- a/.reek.yml
+++ b/.reek.yml
@@ -234,6 +234,9 @@ directories:
   "app/controllers":
     InstanceVariableAssumption:
       enabled: false
+  "app/helpers":
+    UtilityFunction:
+      enabled: false
   "app/jobs":
     UtilityFunction:
       enabled: false
