add back 2 ignores

--- a/.reek.yml
+++ b/.reek.yml
@@ -206,6 +206,8 @@ detectors:
       - Fakes::PexipService
       - HearingAdminActionVerifyAddressTask#available_hearing_admin_actions
       - HearingDispositionChangeJob
+      - Helpers::AppealHearingHelper#available_hearing_locations
+      - Helpers::AppealHearingHelper#hearings
       - JudgeLegacyDecisionReviewTask#review_action
       - LatestRatingDisabilityEvaluation#latest_disability_evaluation
       - LegacyDocket#age_of_n_oldest_genpop_priority_appeals
