remove environment from seed-dbs
It was causing the circle-ci demo step to fail

--- a/Makefile.example
+++ b/Makefile.example
@@ -160,7 +160,7 @@ reset-dbs: ## Resets Caseflow and ETL database schemas
 seed-dbs:	## Seed all databases
 	bundle exec rake local:vacols:seed
 	bundle exec rake spec:setup_vacols
-	RAILS_ENV=development bundle exec rake db:seed
+	bundle exec rake db:seed
 	DB=etl bundle exec rake db:seed
 
 enable-feature-flags: ## enable all feature flags
