--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -92,6 +92,7 @@ Rails/Present:
 Metrics/MethodLength:
   Max: 20
   Exclude:
+    - app/jobs/middleware/job_sentry_scope_middleware.rb
     - "spec/**/*"
 
 Metrics/ClassLength:
