--- a/client/package.json
+++ b/client/package.json
@@ -59,7 +59,7 @@
     "@babel/runtime-corejs2": "^7.12.5",
     "@department-of-veterans-affairs/caseflow-frontend-toolkit": "https://github.com/department-of-veterans-affairs/caseflow-frontend-toolkit#71ee169",
     "@fortawesome/fontawesome-free": "^5.3.1",
-    "@hookform/resolvers": "^1.3.2",
+    "@hookform/resolvers": "^2.0.0-beta.5",
     "@reduxjs/toolkit": "^1.4.0",
     "@storybook/addon-a11y": "^6.1.9",
     "@storybook/addon-actions": "^6.1.9",
