various updates to DocketSwitchEditTasksForm: - now show mandatory tasks (disabled checkboxes) - copy changes

--- a/client/constants/DOCKET_SWITCH_TASKS_BY_DOCKET_TYPE.json
+++ b/client/constants/DOCKET_SWITCH_TASKS_BY_DOCKET_TYPE.json
@@ -1,5 +1,16 @@
 {
-  "directReview": ["DistributionTask"],
-  "evidenceSubmission": ["DistributionTask", "EvidenceSubmissionWindowTask"],
-  "hearing": ["DistributionTask", "HearingTask"]
+  "directReview": [
+    { "id": "DistributionTask", "label": "Distribution Task" }
+  ],
+  "evidenceSubmission": [
+    { "id": "DistributionTask", "label": "Distribution Task" },
+    {
+      "id": "EvidenceSubmissionWindowTask",
+      "label": "Evidence Submission Window Task"
+    }
+  ],
+  "hearing": [
+    { "id": "DistributionTask", "label": "Distribution Task" },
+    { "id": "HearingTask", "label": "Hearing Task" }
+  ]
 }
