fixed bug in updateDocketSwitch reducer; properly update route in submit of DocketSwitchEditTasksContainer; simpler handling of mandatory Docket Switch tasks; updated feature test to complete step 3 of docket switch checkout;

--- a/client/constants/DOCKET_SWITCH_TASKS_BY_DOCKET_TYPE.json
+++ b/client/constants/DOCKET_SWITCH_TASKS_BY_DOCKET_TYPE.json
@@ -1,8 +1,8 @@
 {
-  "directReview": [
+  "direct_review": [
     { "id": "DistributionTask", "label": "Distribution Task" }
   ],
-  "evidenceSubmission": [
+  "evidence_submission": [
     { "id": "DistributionTask", "label": "Distribution Task" },
     {
       "id": "EvidenceSubmissionWindowTask",
