--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,7 @@ jobs:
       # The first image listed is the image that all steps run inside of.
       # This can be modified by steps, or can be built as a separate
       # customized container.
-      - image: 008577686731.dkr.ecr.us-gov-east-1.amazonaws.com/circleci:test
+      - image: 008577686731.dkr.ecr.us-gov-west-1.amazonaws.com/circleci:test
         environment:
           - DBUS_SESSION_BUS_ADDRESS: /dev/null
           - RAILS_ENV: test
@@ -113,7 +113,7 @@ jobs:
             POSTGRES_DB: caseflow_certification_test
 
       # This is our homespun VACOLS container. An oracle db with some special sauce.
-      - image: 008577686731.dkr.ecr.us-gov-east-1.amazonaws.com/facols:latest
+      - image: 008577686731.dkr.ecr.us-gov-west-1.amazonaws.com/facols:latest
 
       # This is the circleci provided Redis container.
       - image: circleci/redis:4.0.10
@@ -162,7 +162,7 @@ jobs:
       # The first image listed is the image that all steps run inside of.
       # This can be modified by steps, or can be built as a separate
       # customized container.
-      - image: 008577686731.dkr.ecr.us-gov-east-1.amazonaws.com/circleci:test
+      - image: 008577686731.dkr.ecr.us-gov-west-1.amazonaws.com/circleci:test
         environment:
           - DBUS_SESSION_BUS_ADDRESS: /dev/null
           - RAILS_ENV: test
@@ -181,7 +181,7 @@ jobs:
             POSTGRES_DB: caseflow_certification_test
 
       # This is our homespun VACOLS container. An oracle db with some special sauce.
-      - image: 008577686731.dkr.ecr.us-gov-east-1.amazonaws.com/facols:latest
+      - image: 008577686731.dkr.ecr.us-gov-west-1.amazonaws.com/facols:latest
 
       # This is the circleci provided Redis container.
       - image: circleci/redis:4.0.10
@@ -278,7 +278,7 @@ jobs:
       # The first image listed is the image that all steps run inside of.
       # This can be modified by steps, or can be built as a separate
       # customized container.
-      - image: 008577686731.dkr.ecr.us-gov-east-1.amazonaws.com/circleci:test
+      - image: 008577686731.dkr.ecr.us-gov-west-1.amazonaws.com/circleci:test
         environment:
           - DBUS_SESSION_BUS_ADDRESS: /dev/null
           - RAILS_ENV: test
@@ -297,7 +297,7 @@ jobs:
             POSTGRES_DB: caseflow_certification_test
 
       # This is our homespun VACOLS container. An oracle db with some special sauce.
-      - image: 008577686731.dkr.ecr.us-gov-east-1.amazonaws.com/facols:latest
+      - image: 008577686731.dkr.ecr.us-gov-west-1.amazonaws.com/facols:latest
 
       # This is the circleci provided Redis container.
       - image: circleci/redis:4.0.10
@@ -380,7 +380,7 @@ jobs:
       # The first image listed is the image that all steps run inside of.
       # This can be modified by steps, or can be built as a separate
       # customized container.
-      - image: 008577686731.dkr.ecr.us-gov-east-1.amazonaws.com/circleci:test
+      - image: 008577686731.dkr.ecr.us-gov-west-1.amazonaws.com/circleci:test
         environment:
           - DBUS_SESSION_BUS_ADDRESS: /dev/null
     steps:
