update docker to use new base circleci image and install microsoft edge

--- a/ci-bin/circle_docker_container/Dockerfile
+++ b/ci-bin/circle_docker_container/Dockerfile
@@ -1,14 +1,45 @@
-# NOTE: Once we are no longer using the default Ruby environment, we should upgrade
-# our base container to something more recent.
-FROM circleci/ruby:2.5.3-node-browsers
+# Use CircleCI with ruby 2.5 and browsers installed as a base.
+# see https://circleci.com/developer/images
+FROM cimg/ruby:2.5-browsers
 
 USER root
 
-# pdftk is used directly in the app. libaio1 and libaio-dev are used with Oracle's instantclient
-RUN apt-get install pdftk libaio1 libaio-dev
+RUN apt-get update
+
+# pdftk is used directly in the app.
+# Note: ruby 2.5 is bundled with Ubuntu 18, which no longer has pdftk.
+# Build java port of pdftk from source
+# see https://gitlab.com/pdftk-java/pdftk
+RUN apt-get install ant default-jre-headless libcommons-lang3-java libbcprov-java
+RUN git clone https://gitlab.com/pdftk-java/pdftk.git \
+    && cd pdftk \
+    && mkdir lib \
+    && ln -st lib /usr/share/java/{commons-lang3,bcprov}.jar \
+    && ant jar \
+    && java -jar build/jar/pdftk.jar --version
+ADD stub.sh pdftk/build/jar/stub.sh
+# Create a wrapper script for the java port of the pdftk jar
+# see https://github.com/jkraemer/pdf-forms#using-the-java-port-of-pdftk (our dependency)
+RUN cat pdftk/build/jar/stub.sh pdftk/build/jar/pdftk.jar > pdftk.run \
+    && chmod +x pdftk.run \
+    && mv pdftk.run /usr/bin/pdftk \
+    && pdftk --version
+RUN rm -r pdftk
+
+# libaio1 and libaio-dev are used with Oracle's instantclient
+RUN apt-get install libaio1 libaio-dev
 
 ADD instantclient_12_1 /opt/oracle/instantclient_12_1
 ENV LD_LIBRARY_PATH=/opt/oracle/instantclient_12_1
 RUN ln -s /opt/oracle/instantclient_12_1/libclntsh.so.12.1 /opt/oracle/instantclient_12_1/libclntsh.so
+
+# Install Edge
+# via. https://www.tecmint.com/install-microsoft-edge-browser-in-linux/
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+RUN install -o root -g root -m 644 microsoft.gpg /etc/apt/trusted.gpg.d/
+RUN sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge-dev.list'
+RUN rm microsoft.gpg
+RUN apt-get update
+RUN apt-get install microsoft-edge-dev
 
 USER circleci
