--- a/ci-bin/circle_docker_container/Dockerfile
+++ b/ci-bin/circle_docker_container/Dockerfile
@@ -35,6 +35,8 @@ RUN ln -s /opt/oracle/instantclient_12_1/libclntsh.so.12.1 /opt/oracle/instantcl
 
 # Install Edge
 # via. https://www.tecmint.com/install-microsoft-edge-browser-in-linux/
+# TODO: This could eventually migrate to the CircleCI browser-tools orb
+# see https://circleci.com/developer/orbs/orb/circleci/browser-tools
 RUN curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
 RUN install -o root -g root -m 644 microsoft.gpg /etc/apt/trusted.gpg.d/
 RUN sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge-dev.list'
